checkin for 1.4.14 - mixed Java 7 and Java 8 build.
Fix for UTF-8 issue in JSON publisher.
Move (unused) odktables performance tests into (unused) itperf src tree.
Add SHA-1 logic to UI layer so that BasicAuth can be configured for server.
rev 210 Sync protocol.
SQLServer install now runs on Linux and MacOSX
Installer now selectively uses guava-20 or guava-21 based upon install choices (Java 7/Java 8 runtime environment).
Update to latest Google AppEngine SDK