@@ -8,250 +8,76 @@
     <relativePath>../gae-pom.xml</relativePath>
   </parent>
   <artifactId>aggregate-gae</artifactId>
-  <packaging>ear</packaging>
-  <name>ODK Aggregate for Google Appengine</name>
-  <properties>
-    <gae.version>${gooogle.appengine.sdk.version}</gae.version>
-    <test.server.baseUrl>/</test.server.baseUrl>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>org.opendatakit</groupId>
-      <artifactId>aggregate-gae-default</artifactId>
-      <version>latest</version>
-	  <type>war</type>
-    </dependency>
-    <dependency>
-      <groupId>org.opendatakit</groupId>
-      <artifactId>aggregate-gae-n-background</artifactId>
-      <version>latest</version>
-	  <type>war</type>
-    </dependency>
-    <dependency>
-      <groupId>org.opendatakit</groupId>
-      <artifactId>aggregate-src</artifactId>
-      <version>latest</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.wink</groupId>
-        <artifactId>wink-client</artifactId>
-        <version>${org.apache.wink.version}</version>
-        <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <packaging>pom</packaging>
+  <name>Launcher for ODK Aggregate for Google Appengine</name>
   <build>
-    <testSourceDirectory>${toplevel.directory}/src/it/java</testSourceDirectory>
-    <testResources>
-		<testResource>
-			<directory>${toplevel.directory}/src/it/java</directory>
-			<filtering>true</filtering>
-			<includes>
-				<include>**/*.properties</include>
-			</includes>
-		</testResource>
-	</testResources>
     <plugins>
-		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>build-helper-maven-plugin</artifactId>
-			<executions>
-				<execution>
-					<id>add-java-source</id>
-				</execution>
-			</executions>
-		</plugin>
-		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<version>${maven.compiler.plugin.version}</version>
-			<executions>
-				<execution>
-					<id>compile-test-source</id>
-				</execution>
-			</executions>
-		</plugin>
-        <plugin>
-			<artifactId>maven-antrun-plugin</artifactId>
-			<executions>
-			  <execution>
-				<id>ear-clean</id>
-				<phase>pre-clean</phase>
-			  </execution>
-			  <execution>
-				<id>ear-gae-prep</id>
-				<phase>generate-resources</phase>
-			  </execution>
-				<execution>
-					<id>prepare-instrumented-ear-folder</id>
-					<phase>pre-integration-test</phase>
-				</execution>
-				<execution>
-					<id>add-jacoco-to-ear-folder</id>
-					<phase>pre-integration-test</phase>
-				</execution>
-				<execution>
-					<id>prepare-instrumented-ear</id>
-					<phase>pre-integration-test</phase>
-				</execution>
-			</executions>
-        </plugin>
-        <plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-ear-plugin</artifactId>
-			<version>${maven.ear.plugin.version}</version>
-			<configuration>
-			  <skinnyWars>false</skinnyWars>
-			  <modules>
-			    <webModule>
-				  <groupId>org.opendatakit</groupId>
-				  <artifactId>aggregate-gae-default</artifactId>
-				  <uri>default</uri>
-				  <unpack>true</unpack>
-				  <contextRoot>default</contextRoot>
-				</webModule>
-			    <webModule>
-				  <groupId>org.opendatakit</groupId>
-				  <artifactId>aggregate-gae-n-background</artifactId>
-				  <uri>background</uri>
-				  <unpack>true</unpack>
-				  <contextRoot>background</contextRoot>
-				</webModule>
-			  </modules>
-			</configuration>
-			<executions>
-			  <execution>
-				<id>ear-build</id>
-				<phase>package</phase>
-			  </execution>
-			</executions>
-        </plugin>
-		<plugin>
-			<!--  This references the jacoco plugin, configuration is in the parent -->
-			<groupId>org.jacoco</groupId>
-			<artifactId>jacoco-maven-plugin</artifactId>
-		</plugin>
-      <!-- This plug-in integrates project with appengine -->
-	  <!-- TODO: update this to https://cloud.google.com/appengine/docs/java/tools/maven -->
-        <plugin>
-			<groupId>net.kindleit</groupId>
-			<artifactId>maven-gae-plugin</artifactId>
-			<version>${maven.gae.plugin.version}</version>
-			<configuration>
-			  <serverId>local.gae</serverId>
-			  <unpackVersion>${gooogle.appengine.sdk.version}</unpackVersion>
-			  <appDir>${project.build.directory}/${project.build.finalName}</appDir>
-			  <sdkDir>${gae.home}</sdkDir>
-			  <splitJars>true</splitJars>
-			  <jvmFlags>
-				<jvmFlag>-Ddatastore.default_high_rep_job_policy_unapplied_job_pct=20</jvmFlag>
-				<jvmFlag>-XX:PermSize=1536m</jvmFlag>
-				<jvmFlag>-XX:MaxPermSize=1536m</jvmFlag>
-				<jvmFlag>-Xms256m</jvmFlag>
-				<jvmFlag>-Xmx3048m</jvmFlag>
-			  </jvmFlags>
-			  <port>${test.server.port}</port>
-			  <monitorPort>${test.server.gae.monitor.port}</monitorPort>
-			</configuration>
-			<executions>
-				<execution>
-					<id>start-instrumented-gae</id>
-					<phase>pre-integration-test</phase>
-					<goals>
-					  <goal>start</goal>
-					</goals>
-				</execution>
-				<execution>
-					<id>stop-instrumented-gae</id>
-					<phase>post-integration-test</phase>
-					<goals>
-					  <goal>stop</goal>
-					</goals>
-				</execution>
-			</executions>
-			<dependencies>
-				<dependency><!-- we do not want this but have to include it so we can exclude everything -->
-				  <groupId>net.kindleit</groupId>
-				  <artifactId>gae-runtime</artifactId>
-				  <version>1.8.0</version> <!-- safe version -->
-				  <type>pom</type>
-				  <exclusions><!-- ignore everything that version wanted -->
-					<exclusion>
-					  <groupId>*</groupId>
-					  <artifactId>*</artifactId>
-					</exclusion>
-				  </exclusions>
-				</dependency>
-				<dependency>
-				  <groupId>com.google.appengine</groupId>
-				  <artifactId>appengine-tools-sdk</artifactId>
-				  <version>${gooogle.appengine.sdk.version}</version>
-				</dependency>
-				<!-- Google App Engine Runtime Dependencies -->
-				<!-- we do not need any of the Geronimo or JDO DB stuff -->
-
-				<!-- App Engine Runtime Dependencies-->
-				<dependency>
-				  <groupId>com.google.appengine</groupId>
-				  <artifactId>appengine-api-1.0-sdk</artifactId>
-				  <version>${gooogle.appengine.sdk.version}</version>
-				</dependency>
-			</dependencies>
-        </plugin>
-		<plugin>
-		  <!-- This configures the running of odktables integration tests. -->
-		  <artifactId>maven-surefire-plugin</artifactId>
-		  <version>${maven.surefire.plugin.version}</version>
-		  <inherited>true</inherited>
-		  <configuration>
-			<argLine>${surefire.argLine}</argLine>
-			<skipTests>true</skipTests>
-			<classesDirectory>${project.build.directory}/generated-classes/jacoco/classes</classesDirectory>
-			<excludes>
-			  <exclude>**/integration/**</exclude>
-			</excludes>
-		  </configuration>
-		</plugin>
-		<plugin>
-			<artifactId>maven-failsafe-plugin</artifactId>
-			<executions>
-			  <execution>
-				<id>integration-test</id>
-			  </execution>
-			  <execution>
-				<id>verify</id>
-			  </execution>
-			</executions>
-		</plugin>
-		<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>selenium-maven-plugin</artifactId>
-			<executions>
-			  <execution>
-				<id>start-selenium</id>
-			  </execution>
-			  <execution>
-				<id>stop-selenium</id>
-			  </execution>
-			</executions>
-		</plugin>
+      <plugin>
+        <artifactId>maven-toolchains-plugin</artifactId>
+        <version>1.1</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>toolchain</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <toolchains>
+            <paths>
+              <id>gae-1.7</id>
+            </paths>
+          </toolchains>
+        </configuration>
+      </plugin>
+  	  <plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>exec-maven-plugin</artifactId>
+		<version>1.6.0</version>
+		<extensions>true</extensions>
+		<executions>
+		  <execution>
+			  <id>cleaner</id>
+			  <goals>
+				<goal>exec</goal>
+			  </goals>
+			  <phase>clean</phase>
+			  <configuration>
+					<toolchain>paths</toolchain>
+					<executable>mvn</executable>
+					<workingDirectory>${toplevel.directory}</workingDirectory>
+					<environmentVariables>
+						<JAVA_HOME>${jdk7.home}</JAVA_HOME>
+					</environmentVariables>
+					<arguments>
+						<argument>--file</argument>
+						<argument>aggregate-gae/testing-pom.xml</argument>
+						<argument>clean</argument>
+					</arguments>
+  			  </configuration>
+		  </execution>
+		  <execution>
+		      <id>installer</id>
+			  <goals>
+				<goal>exec</goal>
+			  </goals>
+			  <phase>install</phase>
+			  <configuration>
+					<toolchain>paths</toolchain>
+					<executable>mvn</executable>
+					<workingDirectory>${toplevel.directory}</workingDirectory>
+					<environmentVariables>
+						<JAVA_HOME>${jdk7.home}</JAVA_HOME>
+					</environmentVariables>
+					<arguments>
+						<argument>--file</argument>
+						<argument>aggregate-gae/testing-pom.xml</argument>
+						<argument>install</argument>
+					</arguments>
+  			  </configuration>
+		  </execution>
+		</executions>
+	  </plugin>
     </plugins> 
   </build>
-	<reporting>
-		<plugins>
-		  <plugin>
-			<!--  This references the jacoco plugin, configuration is in the parent -->
-			<groupId>org.jacoco</groupId>
-			<artifactId>jacoco-maven-plugin</artifactId>
-			<version>${jacoco.maven.plugin.version}</version>
-			<inherited>true</inherited>
-		  </plugin>
-		  <plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-surefire-report-plugin</artifactId>
-			<version>${maven.surefire.report.plugin.version}</version>
-			<inherited>true</inherited>
-		  </plugin>
-		</plugins>
-	</reporting>
 </project>
